--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -5,16 +5,22 @@ driver:
 provisioner:
   name: chef_zero
   require_chef_omnibus: true
+  environments_path: test/environments
+  client_rb:
+    environment: test
 
 platforms:
-- name: smartos-base64
+- name: smartos
   driver_config:
     box: livinginthepast/smartos-base64
+    box_url: https://atlas.hashicorp.com/livinginthepast/boxes/smartos-base64
     vagrantfile_erb: test/templates/Vagrantfile.smartos.erb
+    zone:
+      name: base64
+      brand: joyent
+      image: 5c7d0d24-3475-11e5-8e67-27953a8b237e
   provisioner:
-    name: chef_zero
-    sudo: true
-    chef_omnibus_url: https://raw.github.com/wanelo-chef/chef-bootstrap/master/latest.sh
+    chef_omnibus_url: https://raw.githubusercontent.com/wanelo-chef/chef-bootstrap/master/standalone.sh
 
 suites:
   - name: default
